<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todo</string>
    <string name="hello_world">Hello world!</string>
    <string name="Logout">Logout</string>
    <string name="UserName">User name</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
     <string name="ConfirmPassword">C Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="title_activity_todo">TodoActivity</string>
    <string name="AddTodo">Add Todo</string>
    <string name="DeleteTodo">Delete Todo</string>
    <string name="title_activity_add_todo">AddTodoActivity</string>
    <string name="Status">Status</string>
    <string name="Title">Title</string>
    <string name="AddTodoForm">Add Todo</string>

    <string-array name="isCompletedArray">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="title_activity_register">RegisterActivity</string>

</resources>